# book-recommendation-system

./: README.md
book-crud-service/: Dockerfile  README.md  book-crud-service-0.1.0.tgz  pyproject.toml  temp-pod.yaml
book-crud-service/book-crud-service/: Chart.yaml  values.yaml
book-crud-service/book-crud-service/templates/: book-crud-deployment.yaml  book-crud-svc.yaml  postgres-db-deployment.yaml  postgres-db-svc.yaml  postgresdb-pvc.yaml  postgresdb_config.yaml  temp-book-crud-svc-exposed.yaml
book-crud-service/docs/source/: book_crud_service.data_access.rst  book_crud_service.models.rst  book_crud_service.models.sqlalchemy.rst  book_crud_service.rest.api.rst  book_crud_service.rst  book_crud_service.temp.rst  conf.py
book-crud-service/src/book_crud_service/: db.py  main.py
book-crud-service/src/book_crud_service/models/pydantic_/: base.py  book.py  review.py
book-crud-service/src/book_crud_service/models/sqlalchemy/: audit_mixin.py  base.py  book.py  review.py
book-crud-service/src/book_crud_service/repositories/: base.py  book_repository.py  review_repository.py
book-crud-service/src/book_crud_service/rest/api/: book_controller.py  common_error.py  review_controller.py
book-crud-service/src/book_crud_service/rest/openapi/: api.yaml
book-crud-service/src/book_crud_service/service/: book_service.py  review_service.py
book-crud-service/tests/unit/book_crud_service/rest/api/: test_book_controller.py
book-recommendation-service/: book_recommender.ipynb  book_recommender_1.ipynb  main.py
summary-generation-service/: llm_integration.py  main.py  (+1 more)
