[tool.poetry]
name = "book-crud-service"
version = "0.1.0"
description = ""
authors = ["Manish Lalwani <manishh0908@gmail.com>"]
readme = "README.md"

packages = [
    { include = "book_crud_service", from = "src" }
]
include = [
    { path = 'tests' }
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic = "2.8.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
